<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:backgroundTint="@null"
    android:padding="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardForegroundColor="@null">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave_card"
        app:tint="@color/green_500" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/foodNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/foodname"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/priceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/qualityTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</com.google.android.material.card.MaterialCardView>