<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="12dp"
    app:cardElevation="0dp">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:gravity="center"
            android:text="@string/choose_language"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_uzbek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="40dp"
                        android:layout_height="36dp"
                        android:layout_marginHorizontal="12dp"
                        android:src="@drawable/ic_flag_uz" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_weight="1"
                        android:text="@string/uzbek"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_russian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="40dp"
                        android:layout_height="36dp"
                        android:layout_marginHorizontal="12dp"
                        android:src="@drawable/ic_flag_ru" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_weight="1"
                        android:text="@string/russian"
                        android:textColor="@color/black"
                        android:textSize="24sp" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="40dp"
                        android:layout_height="36dp"
                        android:layout_marginHorizontal="12dp"
                        android:src="@drawable/ic_flag_gb" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_weight="1"
                        android:text="@string/english"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="0.5">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/btn_uzbek"
                        android:layout_width="68dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/btn_russian"
                        android:layout_width="68dp"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/btn_english"
                        android:layout_width="68dp"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="24dp"
            android:background="@color/gray_e5"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/yellow"
                android:textSize="22sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>